<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:src="@drawable/instunfollowlogowhite"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logoDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="15dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etLogin"
            android:textSize="16sp"
            android:backgroundTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etLogin"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:textSize="16sp"
            android:backgroundTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPassword"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bLogin"
        android:text="@string/bLogin"
        android:background="@drawable/greybuttonselector"
        android:textColor="@android:color/white"
        android:onClick="onClick"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
