<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/warning"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color_white"
        android:background="@drawable/half_roundedbutton"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-1dp"
        android:background="@drawable/half_background_layout"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/coloum_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coloum_1"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/bluebuttonselector"
                android:text="@string/ok"
                android:textColor="@color/text_color_white" />

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/redbuttonselector"
                android:text="@string/cancel"
                android:textColor="@color/text_color_white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>