<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/unfollowing"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color_white"
        android:background="@drawable/half_roundedbutton"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-1dp"
        android:background="@drawable/half_background_layout"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/coloum_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/unfollow_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/unfollow_name"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_marginTop="15dp"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="12"
                android:max="50"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20%"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/unfollow_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_50"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>


        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_below="@id/coloum_1"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7166764673125229/1725162365">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</RelativeLayout>