<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MyAccountFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kuala_lumpur"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FFffffff"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layout_num_followers"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/username"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="TextView"
                    android:textColor="@color/colorBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/user_profile"
                    app:layout_constraintStart_toStartOf="@+id/user_profile"
                    app:layout_constraintTop_toBottomOf="@+id/user_profile" />

                <LinearLayout
                    android:id="@+id/layout_num_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:textColor="@color/colorBackground"
                    app:layout_constraintBottom_toBottomOf="@+id/user_profile"
                    app:layout_constraintStart_toEndOf="@+id/user_profile"
                    app:layout_constraintTop_toTopOf="@+id/user_profile"
                    app:layout_constraintEnd_toStartOf="@id/layout_num_following">
                    <TextView
                        android:id="@+id/num_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBackground"
                        android:text="8.6k"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:text="followers"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_num_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/layout_num_followers"
                    app:layout_constraintStart_toEndOf="@+id/layout_num_followers"
                    app:layout_constraintTop_toTopOf="@+id/layout_num_followers"
                    app:layout_constraintEnd_toStartOf="@id/layout_num_posts">
                    <TextView
                        android:id="@+id/num_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBackground"
                        android:text="8.6k"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:text="following"/>
                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/layout_num_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/layout_num_following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/layout_num_following"
                    app:layout_constraintTop_toTopOf="@+id/layout_num_following" >
                    <TextView
                        android:id="@+id/num_posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBackground"
                        android:text="8.6k"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorBackground"
                        android:text="posts"/>
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

                <RelativeLayout
                    android:id="@+id/relativeLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerInParent="true"
                        android:src="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/num_non_follower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:text="5454"
                        android:textColor="@color/colorBackground" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/non_followers"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="12sp"
                    android:text="@string/non_follow_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/relativeLayout5"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/today_unfollowed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="6565"
                        android:textColor="@color/colorBackground" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/unfollowed"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:textSize="12sp"
                    android:text="@string/today_unfollowed_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/relativeLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

            </android.support.constraint.ConstraintLayout>
            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"/>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-7166764673125229/1725162365"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                app:layout_constraintBottom_toTopOf="@id/logout"/>

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="4dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/adView"
                tools:ignore="UnusedAttribute" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>